--- a/RukayaFileManager/Info.plist
+++ b/RukayaFileManager/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need access to your photo library to upload and manage photos.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -13,21 +11,25 @@
 			<key>UIWindowSceneSessionRoleApplication</key>
 			<array>
 				<dict>
+					<key>NSCameraUsageDescription</key>
+					<string>We need access to your camera to take photos.</string>
+					<key>NSPhotoLibraryAddUsageDescription</key>
+					<string>We need permission to save photos to your library.</string>
+					<key>NSPhotoLibraryUsageDescription</key>
+					<string>We need access to your photo library to display your photos.</string>
 					<key>UISceneConfigurationName</key>
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
 					<string>Main</string>
-                    <key>NSPhotoLibraryAddUsageDescription</key>
-                    <string>We need permission to save photos to your library.</string>
-                    <key>NSPhotoLibraryUsageDescription</key>
-                    <string>We need access to your photo library to display your photos.</string>
-                    <key>NSCameraUsageDescription</key>
-                    <string>We need access to your camera to take photos.</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
